package rec.gui;

message CustomProto {
  optional string type_name = 1;
  optional string data = 2;
};
